overflow correction / scroll prevent / reset function added

--- a/public/style.css
+++ b/public/style.css
@@ -760,6 +760,74 @@ body {
   min-width: 91px;
   color: var(--cancelbtnTXT);
 }
+#resetScreen {
+  display: none;
+  background-color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  border-radius: 0px 0px 20px 20px;
+}
+.resetScreen {
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 10px;
+}
+#resetYES {
+  width: 100px;
+  height: 35px;
+  border-radius: 24px;
+  background-color: #ec5757;
+  color: white;
+  border-width: 0px;
+}
+#resetNO {
+  width: 100px;
+  height: 35px;
+  border-radius: 24px;
+  background-color: #252945;
+  color: white;
+  border-width: 0px;
+}
+.resetTXT {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.1px;
+  color: #7e88c3;
+}
+.resetScreenAnim {
+  animation: sweepToBottom 1s forwards;
+}
+.resetScreenAnimU {
+  animation: sweepToBottomU 1s forwards;
+}
+@keyframes sweepToBottomU {
+  100% {
+    transform: translateY(-100%);
+  }
+  0% {
+    transform: translateY(0%);
+  }
+}
+@keyframes sweepToBottom {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
 .confirmbutton {
   background: #ec5757;
   border-radius: 24px;
